--- a/index.html
+++ b/index.html
@@ -6,103 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <link rel="shortcut icon" href="/img/bird.svg" type="image.png">
+    <link rel="stylesheet" href="/style.css">
+    <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
     <title>Internet historia och utveckling</title>
-    <style>
-        body {
-            font-family: 'Josefin Sans';
-            text-align: center;
-            letter-spacing: 0.3px;
-        }
-
-        header {
-            font-size: 30px;
-            height: 100px;
-            padding-top: 50px;
-            color: aliceblue;
-            background-image: url(img/H1bc.jpg);
-            background-size: cover;
-            overflow: hidden;
-            border-radius: 5px;
-
-        }
-
-        .h2 {
-            margin: 0 auto;
-            font-size: 24px;
-        }
-
-        .container {
-            display: inline-flex;
-            margin: 0 auto;
-            margin: 30px;
-        }
-
-        .container:hover {
-            box-shadow: 2px 2px 2px 2px #92a2a8;
-            transition: 0.3s;
-        }
-
-        .questions {
-            width: 500px;
-            padding: 30px 20px 30px 30px;
-            text-align: left;
-        }
-
-        .questions h3 {
-            font-size: 21px;
-        }
-
-        .questions p {
-            padding-left: 20px;
-            font-size: 21px;
-        }
-
-        .pictures {
-            display: flex;
-            align-items: center;
-
-        }
-
-        .pictures img {
-            width: 300px;
-            height: 200px;
-            margin: 20px 21px 15px 0;
-        }
-
-        .pictures img:hover {
-            transform: scale(1.05, 1.05);
-        }
-
-        footer {
-            padding-right: 30px;
-            text-align: right;
-            font-size: 15px;
-            font-weight: lighter;
-            background-color: black;
-            color: rgb(233, 228, 220);
-        }
-
-        footer a {
-            color: rgb(145, 144, 141);
-        }
-
-        #copyleft {
-            display: inline-block;
-            transform: rotate(180deg);
-            font-size: 20px;
-        }
-    </style>
 </head>
-
 <body>
-
     <header>
         <h1>Internet Historia och Utveckling</h1>
         <br>
-      
+
     </header>
-     <hr><br>
+    <hr><br>
     <div class="h2">
         <h2>Frågor till Internet utveckling och webbhistoria : </h2>
     </div>
@@ -458,7 +373,8 @@
             <a href="https://sv.wikipedia.org/wiki/Spotify" target="_blank"><img src="img/30.jpg"></a>
         </div>
     </div>
-    <br><br><br><hr><br>
+    <br><br><br>
+    <hr><br>
 
     <div class="h2">
         <h2>Frågor till lagar inom webbutveckling : </h2>
@@ -593,7 +509,7 @@
     <hr>
     <footer>
         <br><br><br>
-        <em>Copyleft <span id="copyleft"> ©</span> LienChu 2022</em><br>
+        <span><i class="fa-brands fa-creative-commons-sa"></i></span><em>LienChu 2022</em><br>
         <a href="https://vicky.kilumanga.com/" target="_blank">About me</a>
     </footer>
 
