--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <header>
         <h1>Internet Historia och Utveckling</h1>
         <br>
-
     </header>
     <hr><br>
     <div class="h2">
@@ -25,7 +24,7 @@
     <div class="container">
         <div class="questions">
             <h3>1. När startade utvecklingen av Internet? Vad startade utvecklingen?</h3>
-            <p>Internet utveckling startade under 1960 talet som ett sätt för statlig forskare att dela information</p>
+            <p>Internet utveckling startade under 1960 talet som ett sätt för statlig forskare att dela information.</p>
         </div>
         <div class="pictures">
             <a href="https://www.oxit.se/internets-historia-och-utveckling/" target="_blank"><img src="img/1.jpg"></a>
